--- a/app/components/character-builder/character-builder.tpl.html
+++ b/app/components/character-builder/character-builder.tpl.html
@@ -41,74 +41,79 @@
 
     <div class="c-page">
         <div class="c-page__column">
-            <div class="c-ability-property">
-                <span class="c-ability-property__label" title="Based on the current level">Proficiency Bonus</span>
-                <span class="c-ability-property__modifier">{{ vm.character.proficiencyBonus | modifier }}</span>
-            </div>
-            <label class="c-ability-property">
-                <span class="c-ability-property__label" title="Defined by the GM">Inspiration</span>
-                <input class="c-ability-property__modifier" type="text" pattern="[+-]?[0-9]+"/>
-            </label>
+            <div class="c-page__box">
+                <div class="c-ability-property">
+                    <span class="c-ability-property__label" title="Based on the current level">Proficiency Bonus</span>
+                    <span class="c-ability-property__modifier">{{ vm.character.proficiencyBonus | modifier }}</span>
+                </div>
+                <label class="c-ability-property">
+                    <span class="c-ability-property__label" title="Defined by the GM">Inspiration</span>
+                    <input class="c-ability-property__modifier" type="text" pattern="[+-]?[0-9]+"/>
+                </label>
 
-            <ability ng-repeat="ability in vm.character.abilities"
-                     ability="ability"
-                     proficiency-bonus="vm.character.proficiencyBonus"></ability>
+                <ability ng-repeat="ability in vm.character.abilities"
+                         ability="ability"
+                         proficiency-bonus="vm.character.proficiencyBonus"></ability>
 
-            <div class="c-ability-property">
+                <div class="c-ability-property">
                 <span class="c-ability-property__label"
                       title="10 + Perception modifier">Passive Wisdom (Perception)</span>
-                <span class="c-ability-property__modifier">{{ vm.character.passiveWisdom }}</span>
+                    <span class="c-ability-property__modifier">{{ vm.character.passiveWisdom }}</span>
+                </div>
             </div>
         </div>
 
         <div class="c-page__column c-combat">
-            <div class="c-page__row">
-                <labelled-box label="Armor Class" class="c-combat__fixedItem c-combat__fixedItem--shield">
-                    <input type="text" pattern="[0-9]+" class="c-combat__fixedValue" ng-model="vm.character.armorClass" required/>
-                </labelled-box>
-                <labelled-box label="Initiative" class="c-combat__fixedItem">
-                    <span class="c-combat__fixedValue">{{ vm.character.initiative | modifier }}</span>
-                </labelled-box>
-                <labelled-box label="Speed" class="c-combat__fixedItem">
-                    <input type="text" pattern="[0-9]+" class="c-combat__fixedValue" ng-model="vm.character.speed" required/>
-                </labelled-box>
+            <div class="c-page__box">
+                <div class="c-page__row">
+                    <labelled-box label="Armor Class" class="c-combat__fixedItem c-combat__fixedItem--shield">
+                        <input type="text" pattern="[0-9]+" class="c-combat__fixedValue" ng-model="vm.character.armorClass" required/>
+                    </labelled-box>
+                    <labelled-box label="Initiative" class="c-combat__fixedItem">
+                        <span class="c-combat__fixedValue">{{ vm.character.initiative | modifier }}</span>
+                    </labelled-box>
+                    <labelled-box label="Speed" class="c-combat__fixedItem">
+                        <input type="text" pattern="[0-9]+" class="c-combat__fixedValue" ng-model="vm.character.speed" required/>
+                    </labelled-box>
+                </div>
+                <div class="c-page__row">
+                    <labelled-box label="Current Hit Points" class="c-hitpoints c-combat__fullItem">
+                        <label class="c-combat-counter__limit">
+                            <span class="c-combat-counter__limitLabel">
+                                Hit Point Maximum
+                            </span>
+                            <input type="number" class="c-combat-counter__limitInput" ng-model="vm.character.maxHitpoints" required />
+                        </label>
+                        <div class="c-combat-counter__valueWrapper">
+                            <textarea class="c-combat-counter__value c-combat-counter__value--large" ng-model="vm.character.hitpoints"></textarea>
+                        </div>
+                    </labelled-box>
+                </div>
+                <div class="c-page__row">
+                    <labelled-box label="Temporary Hit Points" class="c-temporary-hitpoints c-combat__fullItem">
+                        <div class="c-combat-counter__valueWrapper">
+                            <textarea class="c-combat-counter__value" ng-model="vm.character.temporaryHitpoints"></textarea>
+                        </div>
+                    </labelled-box>
+                </div>
+                <div class="c-page__row">
+                    <labelled-box label="Hit Dice" class="c-hit-dice c-combat__sharedItem">
+                        <label class="c-combat-counter__limit">
+                            <span class="c-combat-counter__limitLabel c-combat-counter__limitLabel--small">
+                                Total
+                            </span>
+                            <input type="text" pattern="[0-9]+d[0-9]+" class="c-combat-counter__limitInput" ng-model="vm.character.hitDice" required />
+                        </label>
+                        <div class="c-combat-counter__valueWrapper">
+                            <input type="number" class="c-combat-counter__value" ng-model="vm.character.hitDiceUsed" />
+                        </div>
+                    </labelled-box>
+                    <labelled-box label="Death Saves" class="c-combat__sharedItem">
+                        <death-saves value="vm.character.deathSaves"></death-saves>
+                    </labelled-box>
+                </div>
             </div>
-            <div class="c-page__row">
-                <labelled-box label="Current Hit Points" class="c-hitpoints c-combat__fullItem">
-                    <label class="c-combat-counter__limit">
-                        <span class="c-combat-counter__limitLabel">
-                            Hit Point Maximum
-                        </span>
-                        <input type="number" class="c-combat-counter__limitInput" ng-model="vm.character.maxHitpoints" required />
-                    </label>
-                    <div class="c-combat-counter__valueWrapper">
-                        <textarea class="c-combat-counter__value c-combat-counter__value--large" ng-model="vm.character.hitpoints"></textarea>
-                    </div>
-                </labelled-box>
-            </div>
-            <div class="c-page__row">
-                <labelled-box label="Temporary Hit Points" class="c-temporary-hitpoints c-combat__fullItem">
-                    <div class="c-combat-counter__valueWrapper">
-                        <textarea class="c-combat-counter__value" ng-model="vm.character.temporaryHitpoints"></textarea>
-                    </div>
-                </labelled-box>
-            </div>
-            <div class="c-page__row">
-                <labelled-box label="Hit Dice" class="c-hit-dice c-combat__sharedItem">
-                    <label class="c-combat-counter__limit">
-                        <span class="c-combat-counter__limitLabel c-combat-counter__limitLabel--small">
-                            Total
-                        </span>
-                        <input type="text" pattern="[0-9]+d[0-9]+" class="c-combat-counter__limitInput" ng-model="vm.character.hitDice" required />
-                    </label>
-                    <div class="c-combat-counter__valueWrapper">
-                        <input type="number" class="c-combat-counter__value" ng-model="vm.character.hitDiceUsed" />
-                    </div>
-                </labelled-box>
-                <labelled-box label="Death Saves" class="c-combat__sharedItem">
-                    <death-saves value="vm.character.deathSaves"></death-saves>
-                </labelled-box>
-            </div>
+            <weapons-list character="vm.character"></weapons-list>
         </div>
         <div class="c-page__column"></div>
     </div>
