Move Combat stats and Personality Traits to separate components

--- a/app/components/character-builder/character-builder.tpl.html
+++ b/app/components/character-builder/character-builder.tpl.html
@@ -11,80 +11,10 @@
 
         <div class="c-page__column">
             <combat-stats character="vm.character"></combat-stats>
-            <div class="o-box">
-                <div class="c-page__row">
-                    <labelled-box label="Armor Class" class="c-combat__fixedItem c-combat__fixedItem--shield">
-                        <input type="text" pattern="[0-9]+" class="c-combat__fixedValue" ng-model="vm.character.armorClass" required/>
-                    </labelled-box>
-                    <labelled-box label="Initiative" class="c-combat__fixedItem">
-                        <span class="c-combat__fixedValue">{{ vm.character.initiative | modifier }}</span>
-                    </labelled-box>
-                    <labelled-box label="Speed" class="c-combat__fixedItem">
-                        <input type="text" pattern="[0-9]+" class="c-combat__fixedValue" ng-model="vm.character.speed" required/>
-                    </labelled-box>
-                </div>
-                <div class="c-page__row">
-                    <labelled-box label="Current Hit Points" class="c-hitpoints c-combat__fullItem">
-                        <label class="c-combat-counter__limit">
-                            <span class="c-combat-counter__limitLabel">
-                                Hit Point Maximum
-                            </span>
-                            <input type="number" class="c-combat-counter__limitInput" ng-model="vm.character.maxHitpoints" required />
-                        </label>
-                        <div class="c-combat-counter__valueWrapper">
-                            <textarea class="c-combat-counter__value c-combat-counter__value--large" ng-model="vm.character.hitpoints"></textarea>
-                        </div>
-                    </labelled-box>
-                </div>
-                <div class="c-page__row">
-                    <labelled-box label="Temporary Hit Points" class="c-temporary-hitpoints c-combat__fullItem">
-                        <div class="c-combat-counter__valueWrapper">
-                            <textarea class="c-combat-counter__value" ng-model="vm.character.temporaryHitpoints"></textarea>
-                        </div>
-                    </labelled-box>
-                </div>
-                <div class="c-page__row">
-                    <labelled-box label="Hit Dice" class="c-hit-dice c-combat__sharedItem">
-                        <label class="c-combat-counter__limit">
-                            <span class="c-combat-counter__limitLabel c-combat-counter__limitLabel--small">
-                                Total
-                            </span>
-                            <input type="text" pattern="[0-9]+d[0-9]+" class="c-combat-counter__limitInput" ng-model="vm.character.hitDice" required />
-                        </label>
-                        <div class="c-combat-counter__valueWrapper">
-                            <input type="number" class="c-combat-counter__value" ng-model="vm.character.hitDiceUsed" />
-                        </div>
-                    </labelled-box>
-                    <labelled-box label="Death Saves" class="c-combat__sharedItem">
-                        <death-saves value="vm.character.deathSaves"></death-saves>
-                    </labelled-box>
-                </div>
-            </div>
             <weapons-list character="vm.character"></weapons-list>
         </div>
         <div class="c-page__column">
-            <div class="o-box">
-                <div class="c-page__row">
-                    <labelled-box label="Personality Traits">
-                        <textarea class="o-ruled-input" ng-model="vm.character.personality.traits"></textarea>
-                    </labelled-box>
-                </div>
-                <div class="c-page__row">
-                    <labelled-box label="Ideals">
-                        <textarea class="o-ruled-input" ng-model="vm.character.personality.ideals"></textarea>
-                    </labelled-box>
-                </div>
-                <div class="c-page__row">
-                    <labelled-box label="Bonds">
-                        <textarea class="o-ruled-input" ng-model="vm.character.personality.bonds"></textarea>
-                    </labelled-box>
-                </div>
-                <div class="c-page__row">
-                    <labelled-box label="Flaws">
-                        <textarea class="o-ruled-input" ng-model="vm.character.personality.flaws"></textarea>
-                    </labelled-box>
-                </div>
-            </div>
+            <personality-traits character="vm.character"></personality-traits>
             <labelled-box label="Features & Traits">
                 <textarea class="o-ruled-input" ng-model="vm.character.features"></textarea>
             </labelled-box>
