--- a/app/components/abilities/ability.tpl.html
+++ b/app/components/abilities/ability.tpl.html
@@ -1,4 +1,4 @@
-<div class="c-page__row">
+<div class="c-abilityRow">
     <labelled-box label="{{ vm.ability.name }}" class="c-ability">
         <p class="c-ability__modifier">
             <input type="text" pattern="[0-9+-]*" ng-model="vm.ability.points"
