--- a/app/components/combat-stats/combat-stats.tpl.html
+++ b/app/components/combat-stats/combat-stats.tpl.html
@@ -1,5 +1,5 @@
 <div class="o-box">
-    <div class="c-page__row">
+    <div class="o-row">
         <labelled-box label="Armor Class" class="c-combat__fixedItem c-combat__fixedItem--shield">
             <input type="text" pattern="[0-9]+" class="c-combat__fixedValue" ng-model="character.armorClass" required/>
         </labelled-box>
@@ -10,7 +10,7 @@
             <input type="text" pattern="[0-9]+" class="c-combat__fixedValue" ng-model="character.speed" required/>
         </labelled-box>
     </div>
-    <div class="c-page__row">
+    <div class="o-row">
         <labelled-box label="Current Hit Points" class="c-hitpoints c-combat__fullItem">
             <label class="c-combat-counter__limit">
                             <span class="c-combat-counter__limitLabel">
@@ -23,14 +23,14 @@
             </div>
         </labelled-box>
     </div>
-    <div class="c-page__row">
+    <div class="o-row">
         <labelled-box label="Temporary Hit Points" class="c-temporary-hitpoints c-combat__fullItem">
             <div class="c-combat-counter__valueWrapper">
                 <textarea class="c-combat-counter__value" ng-model="character.temporaryHitpoints"></textarea>
             </div>
         </labelled-box>
     </div>
-    <div class="c-page__row">
+    <div class="o-row">
         <labelled-box label="Hit Dice" class="c-hit-dice c-combat__sharedItem">
             <label class="c-combat-counter__limit">
                             <span class="c-combat-counter__limitLabel c-combat-counter__limitLabel--small">
