--- a/app/components/personality-traits/personality-traits.tpl.html
+++ b/app/components/personality-traits/personality-traits.tpl.html
@@ -1,20 +1,20 @@
 <div class="o-box">
-    <div class="c-page__row">
+    <div class="o-row">
         <labelled-box label="Personality Traits">
             <textarea class="o-ruled-input" ng-model="character.personality.traits"></textarea>
         </labelled-box>
     </div>
-    <div class="c-page__row">
+    <div class="o-row">
         <labelled-box label="Ideals">
             <textarea class="o-ruled-input" ng-model="character.personality.ideals"></textarea>
         </labelled-box>
     </div>
-    <div class="c-page__row">
+    <div class="o-row">
         <labelled-box label="Bonds">
             <textarea class="o-ruled-input" ng-model="character.personality.bonds"></textarea>
         </labelled-box>
     </div>
-    <div class="c-page__row">
+    <div class="o-row">
         <labelled-box label="Flaws">
             <textarea class="o-ruled-input" ng-model="character.personality.flaws"></textarea>
         </labelled-box>
