--- a/app/style/components/_all.scss
+++ b/app/style/components/_all.scss
@@ -1,6 +1,6 @@
 @import "c-title";
 @import "c-header";
-@import "c-page";
+@import "c-character-builder";
 @import "c-ability-property";
 @import "c-ability";
 @import "c-skills";
@@ -12,3 +12,4 @@
 @import "c-menu";
 @import "c-weapons-list";
 @import "c-owned-weapons";
+@import "c-tabs";
