--- a/app/style/components/_c-character-builder.scss
+++ b/app/style/components/_c-character-builder.scss
@@ -1,10 +1,10 @@
-.c-page {
+.c-character-builder {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 }
 
-.c-page__column {
+.c-character-builder__column {
 	flex-basis: 330px;
 	flex-grow: 1;
 	flex-shrink: 0;
