Create initial inventory directive

--- a/app/components/character-builder/character-builder.tpl.html
+++ b/app/components/character-builder/character-builder.tpl.html
@@ -10,6 +10,7 @@
         <combat-stats character="vm.character" tab="Combat"></combat-stats>
         <weapons-list character="vm.character" tab="Weapons"></weapons-list>
         <personality-traits character="vm.character" tab="Personality"></personality-traits>
+        <inventory character="vm.character" tab="Inventory"></inventory>
         <labelled-box label="Features & Traits" tab="Features & Traits">
             <textarea class="o-ruled-input" ng-model="vm.character.features"></textarea>
         </labelled-box>
