--- a/app/components/character-builder/character-builder.tpl.html
+++ b/app/components/character-builder/character-builder.tpl.html
@@ -1,7 +1,7 @@
 <menu character="vm.character" is-valid="vm.isFormValid()"></menu>
 <h1 class="c-title">Character Sheet</h1>
 
-<form name="characterBuilder">
+<form name="characterBuilder" novalidate>
     <tabs>
 
         <personal-details character="vm.character" tab="Personal Details"></personal-details>
