Add Modal Window support

--- a/app/components/inventory/inventory.add-item.tpl.html
+++ b/app/components/inventory/inventory.add-item.tpl.html
@@ -1,4 +1,5 @@
-<div>
+<div style="width: 250px; height: 200px; font-size: 20px;">
     Add new Item?
     <button ng-click="vm.close()">Close</button>
+    <button ng-click="vm.submit()">Submit</button>
 </div>
