Close modal window on outside click

--- a/app/components/modal-window/modal-window.tpl.html
+++ b/app/components/modal-window/modal-window.tpl.html
@@ -1,5 +1,5 @@
-<div class="c-modal-window">
-    <div class="c-modal-window__content">
+<div class="c-modal-window js-modalWindow-wrapper">
+    <div class="c-modal-window__content js-modalWindow-content">
         <div ng-transclude></div>
     </div>
 </div>
