Create item adding logic

--- a/app/components/inventory/inventory.add-item.tpl.html
+++ b/app/components/inventory/inventory.add-item.tpl.html
@@ -1,5 +1,22 @@
 <div style="width: 250px; height: 200px; font-size: 20px;">
-    Add new Item?
-    <button ng-click="vm.close()">Close</button>
+    <h2>{{ vm.isEdit ? 'Edit' : 'Create New' }} Item</h2>
+    <a ng-click="vm.close()">Close</a>
+
+    <div>
+        <label>
+            Name: <input type="text" ng-model="vm.item.name" />
+        </label>
+    </div>
+    <div>
+        <label>
+            Quantity: <input type="number" ng-model="vm.item.count" min="1" step="1" />
+        </label>
+    </div>
+    <div>
+        <label>
+            weight: <input type="number" ng-model="vm.item.weight"  min="0" step="0.01" />
+        </label>
+    </div>
+
     <button ng-click="vm.submit()">Submit</button>
 </div>
